--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ email: NULL
 description: >- # this means to ignore newlines until "baseurl:"
   Lorem ipsum generator is broken.
 baseurl: "" # the subpath of your site, e.g. /blog
+locale: en_US
 url: "https://askbow.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: askbow
 github_username:  askbow
@@ -32,7 +33,11 @@ linkedin_username: dborchev
 theme: minima
 plugins:
   - jekyll-feed
-permalink: /:year/:month/:day/:title
+permalink: "/:year/:month/:day/:title"
+
+gems:
+  - jekyll-sitemap
+  - jekyll-paginate
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
